@@ -10,9 +10,9 @@ class UnannoPrimitives {
     void local() {
         // test whether an arbitrary declaration annotation gets confused
         @SuppressWarnings("tata")
-        int h = new Integer(5);
+        int h = Integer.valueOf(5);
 
-        int i = new Integer(99) + 1900;
+        int i = Integer.valueOf(99) + 1900;
         int j = 7 + 1900;
 
         // :: error: (type.invalid.annotations.on.use)
